package br.pucminas.matriculas.model.enums;

/**
 * Perfil de acesso do usuario. Define quais funcionalidades o menu exibe apos o login.
 */
public enum Perfil {
    ALUNO,
    PROFESSOR,
    SECRETARIA
}
