package br.pucminas.matriculas.model.enums;

/**
 * Situacao da matricula de um aluno em uma disciplina.
 * Matricula cancelada libera a vaga para outros alunos.
 */
public enum StatusMatricula {
    ATIVA,
    CANCELADA
}
