package br.pucminas.matriculas.model.enums;

/**
 * Classifica a disciplina dentro da matricula do aluno.
 * O aluno pode cursar ate 4 obrigatorias (1a opcao) e ate 2 optativas.
 */
public enum TipoDisciplina {
    OBRIGATORIA,
    OPTATIVA
}
